<resources>
    <string name="app_name">BetUp</string>
    <string name="go">PUSH TO PLAY</string>
    <string name="rate_us">Rate Us</string>
    <string name="today_tips">Today Tips</string>
    <string name="buy">RATE US</string>
    <string name="subscribe">MORE APP</string>
    <string name="history">History</string>
    <string name="bonus">Bonus Tips</string>
    <string name="today_tips_bonus">Today Tips</string>
    <string name="history_bonus">History</string>
   <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

</resources>
