<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/first_page"
    android:orientation="vertical"
    android:padding="1dp">


    <LinearLayout
        android:id="@+id/test_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@android:color/transparent"
            android:paddingStart="25sp"
            android:paddingEnd="25sp"
            android:shadowColor="#ff000000"
            android:shadowDx="5"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:text="@string/subscribe"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:shadowColor="#ff000000"
            android:shadowDx="5"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:text="@string/buy"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:padding="1dp"
        tools:background="@android:color/transparent">

        <Button
            android:id="@+id/todayTipsBonus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="34sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/today_tips_bonus"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:textSize="18sp" />

        <Button
            android:id="@+id/bonus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="34sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/bonus"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/todayTipsBonus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:textSize="18sp" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/carrent_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="01.01.2018"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/futpole2"
        tools:context=".BonusTips">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_bonus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</LinearLayout>